feat(fines) : Implement endpoint to create fines [Delivers #165936257]
